Set correct device pixel ratio in generator

We request pixmaps with a specific dpr, but the returned pixmap has a
dpr of 1.

Later when rendering we set the desired dpr on the pixmap, which causes
the pixmap to detach and copy its content.

BUG: 452406